# staxup

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  download.rs  install.rs  lib.rs  manifest.rs  platform.rs  rollback.rs
tests/: integration_test.rs  test_manifest.toml
